fixed the submit button by adding z-index on the form

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ code {
   position:fixed;
   height: 4em;
   width:100%;
-  z-index: 1;
+  z-index: 2;
 }
 .header .headingTitle {
   position:relative;
@@ -32,6 +32,7 @@ code {
   position: relative;
   top:7em;
   left:2.5em;
+  z-index: 1;
 }
 .my-form .inputText {
   position: absolute;
@@ -60,8 +61,9 @@ code {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   position: relative;
-  left:5.5em;
+  left:3.5em;
   grid-gap:1.5em;
+  box-sizing: border-box;
 
 
 
@@ -69,14 +71,20 @@ code {
 .thumbnail {
   position: relative;
   top:12em;
+
 }
 .thumbnail >h3 {
   font-size: 15px;
+  position: relative;
+  left:3em;
+  text-align: center;
   width:70%;
   color:blue;
 }
 .thumbnail >img {
   border-radius: 10px;
+  position: relative;
+  left:3em;
 }
 @media (max-width:960px) {
 
@@ -90,7 +98,7 @@ code {
     height: 2.5em;
     border-radius: 5px;
     width:60%;
-    left:-0.1em;
+    left:1em;
   }
   .my-form .btn {
     background-color:#000;
@@ -104,7 +112,7 @@ code {
     background-color:yellow;
     color:blue;
     position:absolute;
-    right: 4.5em;
+    right: 1.5em;
     height: 2em;
     border-radius: 5px;
   }
@@ -112,7 +120,7 @@ code {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     position: relative;
-    left:2.5em;
+    left:0.3em;
     grid-gap:1.5em;
 
 
@@ -143,13 +151,13 @@ code {
     height: 2.5em;
     border-radius: 5px;
     width:35%;
-    left:-0.1em;
+    left:1em;
   }
   .my-form .btn {
     background-color:#000;
     color:#fff;
     position:absolute;
-    right: 4em;
+    right: 3em;
     height: 2.7em;
     border-radius: 5px;
     width:35%;
@@ -158,15 +166,15 @@ code {
     background-color:yellow;
     color:blue;
     position:absolute;
-    right: 2em;
-    height: 2em;
+    right: 3em;
+    height: 2.7em;
     border-radius: 5px;
   }
   .photo-grid {
     display: grid;
     grid-template-columns: 1fr  1fr;
     position: relative;
-    left:2.5em;
+    left:0.2em;
     grid-gap:1.5em;
 
 
